--- a/builder.html
+++ b/builder.html
@@ -36,7 +36,7 @@
           <input
             id="back"
             class="input"
-            placeholder="뒤로 돌아갈 Notion URL (선택) 예: https://www.notion.so/..."
+            placeholder="닫을 때 돌아갈 Notion 페이지 URL (추천) 예: https://www.notion.so/..."
             autocomplete="off"
             inputmode="url"
           />
